Changes made for Layout issues in Works Page

--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -2466,8 +2466,8 @@ section #workservices li {
 }
 
 section #workservices li div {
-	width: 310px;
-	height: 315px;
+	width: 280px;
+	height: 290px;
 	color: black;
 	font-size: 6.4em;
 	text-align: center;
